--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,13 @@
+<IfModule mime_module>
+ AddHandler application/x-httpd-ea-php73 .php .php7 .phtml
+ </IfModule> 
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
 
     RewriteEngine On
-
+    
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
